--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -59,6 +59,7 @@
       "Matt Nass[_proNickname:Matt Nass][_proFullName:Matt Nass][#malePronouns#]",
       "Bob Maher[_proNickname:Bob Maher,The Great One][_proFullName:Bob Maher#comma#, Jr.]",
       "Urza[_proNickname:Urza][_proFullName:Urza][#malePronouns#]",
+      "Lee Shi Tian[_proNickname:Lee Shi Tian][_proFullName:Lee Shi Tian][#malePronouns#]",
       "RoboRosewater[_proNickname:RoboRosewater][_proFullName:RoboRosewater][#neutralPronouns#]",
       "GLEEMAX[_proNickname:GLEEMAX][_proFullName:GLEEMAX][#neutralPronouns#]"
   ],
