--- a/src/data/grammar/headlines/mtg-card-of-the-day.yaml
+++ b/src/data/grammar/headlines/mtg-card-of-the-day.yaml
@@ -486,6 +486,13 @@ historicalFigure:
   - "Pagliacci[#malePronouns#]"
   - "Orville Redenbacher[#malePronouns#]"
   - "Walter Cronkite[#malePronouns#]"
+  - "Sherlock Holmes[#malePronouns#]"
+  - "Susan B. Anthony[#femalePronouns#]"
+  - "Mother Theresa[#femalePronouns#]"
+  - "Margaret Thatcher[#femalePronouns#]"
+  - "Eleanor Roosevelt[#femalePronouns#]"
+  - "Maya Angelou[#femalePronouns#]"
+  - "Jane Goodall[#femalePronouns#]"
 
 causeOfDeath:
 - defenstration
