--- a/src/data/grammar/vocab/misc-people.yaml
+++ b/src/data/grammar/vocab/misc-people.yaml
@@ -213,3 +213,23 @@ termOfEndearment:
 - pumpkin
 - baby
 - lambchop
+
+condescendingNickname:
+- chief
+- cowboy
+- fella
+- genius
+- champ
+- cupcake
+- sport
+- kiddo
+- squirt
+- hotshot
+- slugger
+- ace
+- buster
+- einstein
+- tough guy
+
+
+
