remove duplicate vocab; more figures

--- a/src/data/grammar/headlines/mtg-card-of-the-day.yaml
+++ b/src/data/grammar/headlines/mtg-card-of-the-day.yaml
@@ -493,6 +493,9 @@ historicalFigure:
   - "Eleanor Roosevelt[#femalePronouns#]"
   - "Maya Angelou[#femalePronouns#]"
   - "Jane Goodall[#femalePronouns#]"
+  - "Gary Gygax[#malePronouns#]"
+  - "David Bowie[#malePronouns#]"
+  - "Tycho Brahe[#malePronouns#]"
 
 causeOfDeath:
 - defenstration
