--- a/src/data/grammar/vocab/misc-people.yaml
+++ b/src/data/grammar/vocab/misc-people.yaml
@@ -98,6 +98,8 @@ firstName:
 - Guy
 - Napoleon
 - Carlton
+- Elmer
+- Mergatroyd
 
 genericNickname:
 - Stubby
@@ -160,6 +162,7 @@ genericNickname:
 - Samson
 - Jonesy
 - Gizmo
+- Spanky
 
 someGuyOrGal: 
 - guy
