--- a/src/data/grammar/vocab/nouns/nouns.yaml
+++ b/src/data/grammar/vocab/nouns/nouns.yaml
@@ -32,7 +32,8 @@
   "aNoun": [
       "#cardCategory.a#",
       "#creatureTypes.a#",
-      "#itemNoun.a#"
+      "#itemNoun.a#",
+      "#animal.a#"
   ],
   "concreteNoun": [
       "#itemNoun#",
