--- a/src/data/grammar/vocab/verbs/verb-extinguish.yaml
+++ b/src/data/grammar/vocab/verbs/verb-extinguish.yaml
@@ -1,3 +1,12 @@
+verbExtinguish:
+- "#verbExtinguishSpecific#"
+- "#verbExtinguishGeneral#"
+
+
+verbExtinguishPastTense:
+- "#verbExtinguishSpecificPastTense#"
+- "#verbExtinguishGeneralPastTense#"
+
 verbExtinguishSpecific:
 - slaughter
 - drown
